--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link rel="apple-touch-icon" href="/favicon.png" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
+    <!-- Enable standalone mode -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- Status bar style -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <!-- App title -->
+    <meta name="apple-mobile-web-app-title" content="MyPWA" />
+    <!-- Icons for iOS -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon/favicon_180x180.png" />
+
+
     <meta property="og:title" content="VasFood" />
     <meta property="og:description" content="Developed by Vas2Net Interns" />
     <meta property="og:type" content="website" />
