--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- App title -->
     <meta name="apple-mobile-web-app-title" content="MyPWA" />
     <!-- Icons for iOS -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon/favicon_180x180.png" />
+    <link rel="apple-touch-icon" href="/icon/favicon_180x180.png" />
 
 
     <meta property="og:title" content="VasFood" />
